--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,7 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;800&display=swap');
+
 
 /*=============== VARIABLES CSS ===============*/
 :root {
