--- a/assets/css/myStyles.css
+++ b/assets/css/myStyles.css
@@ -123,6 +123,8 @@ flex: 9.5;
 	background-size: 30px;
 	background-position:left;
 	background-repeat: no-repeat;
+	
+	padding-left: 50px;
 }
 
 .textFrom {
@@ -134,10 +136,20 @@ flex: 9.5;
 }
 
 ::placeholder {
-	padding-left: 50px;
+	font-family: 'Poppins', sans-serif;
+	font-weight:700;
 }
 
 .sponsors {
 	margin-left: 20px;
 	margin-right: 20px;
+}
+
+.footer_Copyright {
+	text-align: center;
+	
+	margin-top: 60px;
+	margin-bottom: 100px;
+	
+	font-weight: bold;
 }
