--- a/assets/css/myStyles.css
+++ b/assets/css/myStyles.css
@@ -145,11 +145,9 @@ flex: 9.5;
 	margin-right: 20px;
 }
 
-.footer_Copyright {
-	text-align: center;
-	
+.footer_Copyright {	
 	margin-top: 60px;
 	margin-bottom: 100px;
 	
-	font-weight: bold;
+	color: #4b4a4a
 }
